kubernetes/flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/component: kubernetes-microservices
    app.kubernetes.io/instance: flask-app
  name: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: kubernetes-microservices
      app.kubernetes.io/instance: flask-app
      app.kubernetes.io/name: flask-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: kubernetes-microservices
        app.kubernetes.io/instance: flask-app
        app.kubernetes.io/name: flask-app
    spec:
      containers:
        - image: flask-app:latest
          name: flask-app
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          resources: {}
status: {}
