kubernetes/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: kubernetes-microservices
    app.kubernetes.io/instance: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: kubernetes-microservices
      app.kubernetes.io/instance: mongo
      app.kubernetes.io/name: mongo
  template:
    metadata:
      labels:
        app.kubernetes.io/component: kubernetes-microservices
        app.kubernetes.io/instance: mongo
        app.kubernetes.io/name: mongo
    spec:
      containers:
        - image: mongo:latest
          name: mongo
          ports:
            - containerPort: 27017
              name: mongo
