kubernetes/sinatra-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/component: kubernetes-microservices
    app.kubernetes.io/instance: sinatra-app
  name: sinatra-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: kubernetes-microservices
      app.kubernetes.io/instance: sinatra-app
      app.kubernetes.io/name: sinatra-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: kubernetes-microservices
        app.kubernetes.io/instance: sinatra-app
        app.kubernetes.io/name: sinatra-app
    spec:
      containers:
        - image: sinatra-app:latest
          name: sinatra-app
          imagePullPolicy: Never
          ports:
            - containerPort: 5001
          resources: {}
status: {}
