kubernetes/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: kubernetes-microservices
    app.kubernetes.io/instance: flask-app-service
  name: flask-app
spec:
  selector:
    app.kubernetes.io/component: kubernetes-microservices
    app.kubernetes.io/instance: flask-app
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  type: NodePort
status:
  loadBalancer: {}
