kubernetes/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: kubernetes-microservices
    app.kubernetes.io/instance: mongo-service
  name: mongo
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/component: kubernetes-microservices
    app.kubernetes.io/instance: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
