kubernetes/sinatra-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: kubernetes-microservices
    app.kubernetes.io/instance: sinatra-app-service
  name: sinatra-app
spec:
  selector:
    app.kubernetes.io/component: kubernetes-microservices
    app.kubernetes.io/instance: sinatra-app
  ports:
    - port: 5001
      protocol: TCP
      targetPort: 5001
  type: NodePort
status:
  loadBalancer: {}
