kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-microservices-ingress
  annotations:
spec:
  rules:
    - http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: sinatra-app
                port:
                  number: 5001
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: sinatra-app
                port:
                  number: 5001
          - path: /check_login
            pathType: Prefix
            backend:
              service:
                name: sinatra-app
                port:
                  number: 5001
          - path: /applications
            pathType: Prefix
            backend:
              service:
                name: flask-app
                port:
                  number: 5000
          - path: /application/*
            pathType: Prefix
            backend:
              service:
                name: flask-app
                port:
                  number: 5000
          - path: /logs
            pathType: Prefix
            backend:
              service:
                name: flask-app
                port:
                  number: 5000
